logs/querry_postgres_v1.5/insert_querry_postgres_table/2023-03-21T14:43:19.067280+00:00/5.log
[2023-03-21 14:58:46,332] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: querry_postgres_v1.5.insert_querry_postgres_table manual__2023-03-21T14:43:19.067280+00:00 [queued]>
[2023-03-21 14:58:46,368] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: querry_postgres_v1.5.insert_querry_postgres_table manual__2023-03-21T14:43:19.067280+00:00 [queued]>
[2023-03-21 14:58:46,369] {taskinstance.py:1238} INFO - 
--------------------------------------------------------------------------------
[2023-03-21 14:58:46,370] {taskinstance.py:1239} INFO - Starting attempt 5 of 5
[2023-03-21 14:58:46,371] {taskinstance.py:1240} INFO - 
--------------------------------------------------------------------------------
[2023-03-21 14:58:46,414] {taskinstance.py:1259} INFO - Executing <Task(PostgresOperator): insert_querry_postgres_table> on 2023-03-21 14:43:19.067280+00:00
[2023-03-21 14:58:46,421] {standard_task_runner.py:52} INFO - Started process 17490 to run task
[2023-03-21 14:58:46,430] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'querry_postgres_v1.5', 'insert_querry_postgres_table', 'manual__2023-03-21T14:43:19.067280+00:00', '--job-id', '303', '--raw', '--subdir', 'DAGS_FOLDER/querry_posgresql.py', '--cfg-path', '/tmp/tmpab_icpry', '--error-file', '/tmp/tmp5bvyops5']
[2023-03-21 14:58:46,432] {standard_task_runner.py:77} INFO - Job 303: Subtask insert_querry_postgres_table
[2023-03-21 14:58:46,741] {logging_mixin.py:109} INFO - Running <TaskInstance: querry_postgres_v1.5.insert_querry_postgres_table manual__2023-03-21T14:43:19.067280+00:00 [running]> on host 0b4cdb459521
[2023-03-21 14:58:47,140] {taskinstance.py:1426} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=sakabuana31
AIRFLOW_CTX_DAG_ID=querry_postgres_v1.5
AIRFLOW_CTX_TASK_ID=insert_querry_postgres_table
AIRFLOW_CTX_EXECUTION_DATE=2023-03-21T14:43:19.067280+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-21T14:43:19.067280+00:00
[2023-03-21 14:58:47,218] {base.py:79} INFO - Using connection to: id: postgres_serving. Host: host.docker.internal, Port: 5432, Schema: serving, Login: ***, Password: ***, extra: {}
[2023-03-21 14:58:47,310] {dbapi.py:225} INFO - Running statement: 
            SELECT * FROM None AS xcom_result
            INSERT INTO serving_table_review (date, status_temp, status_preci, business_id, business_name, stars, date_values)
            SELECT date_values, status_temp, status_preci, business_id, business_name, stars, date_values
    , parameters: None
[2023-03-21 14:58:47,320] {taskinstance.py:1700} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "INSERT"
LINE 3:             INSERT INTO serving_table_review (date, status_t...
                    ^

[2023-03-21 14:58:47,421] {taskinstance.py:1277} INFO - Marking task as FAILED. dag_id=querry_postgres_v1.5, task_id=insert_querry_postgres_table, execution_date=20230321T144319, start_date=20230321T145846, end_date=20230321T145847
[2023-03-21 14:58:47,466] {standard_task_runner.py:92} ERROR - Failed to execute job 303 for task insert_querry_postgres_table
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "INSERT"
LINE 3:             INSERT INTO serving_table_review (date, status_t...
                    ^

[2023-03-21 14:58:47,494] {local_task_job.py:154} INFO - Task exited with return code 1
[2023-03-21 14:58:47,693] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
